PROJECT( V8-CORE )

FILE( GLOB_RECURSE V8_CORE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Core/* )
FILE( GLOB_RECURSE V8_GRAPHICS_SOURCES ${CMAKE_SOURCE_DIR}/Graphics/* )

IF( ${CMAKE_SYSTEM_NAME} STREQUAL "Linux" )

    FILE( GLOB_RECURSE V8_SYSTEM_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Linux/* )

ENDIF()

ADD_LIBRARY( v8 SHARED ${V8_CORE_SOURCES} ${V8_SYSTEM_SOURCES} ${V8_GRAPHICS_SOURCES} )

TARGET_INCLUDE_DIRECTORIES( v8 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Core )
TARGET_INCLUDE_DIRECTORIES( v8 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Graphics )
TARGET_INCLUDE_DIRECTORIES( v8 INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/Core/Ext )

IF( ${CMAKE_SYSTEM_NAME} STREQUAL "Linux" )

    TARGET_INCLUDE_DIRECTORIES( v8 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Linux )
    TARGET_LINK_LIBRARIES( v8 PRIVATE xcb )
    TARGET_LINK_LIBRARIES( v8 PRIVATE vulkan )

ENDIF()
